# rag-monorepo

./: .gitignore  docker-compose.integration.yml
.teamcity/: pom.xml  settings.kts
integration_tests/: test_integration.py
service-api/: Dockerfile  pyproject.toml
service-api/app/: main.py
service-api/tests/: test_api.py
service-rag/: Dockerfile  pyproject.toml
service-rag/app/: main.py
service-rag/tests/: test_rag.py
shared/: pyproject.toml
shared/shared/: __init__.py  embedder.py  vector_store.py
shared/tests/: test_shared.py
