[tool.poetry]
name = "service-api"
version = "1.0.0"
description = "FastAPI gateway microservice"
authors = ["kurodayu23"]

[tool.poetry.dependencies]
python = "^3.11"
rag-shared = {path = "../shared", develop = true}
fastapi = "^0.111.0"
uvicorn = {version = "^0.29.0", extras = ["standard"]}
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["..", "."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
